proxmox-terraform-ansible/k8s/apps/stirling-pdf/stirling-pdf.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: frooodle/s-pdf:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: configs
              mountPath: /configs
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: stirling-pdf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: apps
spec:
  selector:
    app: stirling-pdf
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: stirling-pdf.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  number: 80
